--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  display: flex;
-  justify-content: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -39,4 +37,15 @@ h2 {
 h1 {
   display: flex;
   justify-content: center;
+}
+
+.active {
+  color: red;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
